Fixed layout bug where user avatar was forced to be square in the login/user info section in top right corner of page
Former-commit-id: f6f91ab0b486f0aa7bd62cfd67490e9680c58df7

--- a/public/stylesheets/sass/nlcommons.scss
+++ b/public/stylesheets/sass/nlcommons.scss
@@ -110,7 +110,6 @@ body {
         @include pie-border-radius(0px 0px 0px $tab-corner-radius);
         img {
           height: 26px;
-          width: 26px;
           margin-left: 4px;
           margin-right: 4px;
           vertical-align: top;
